--- a/src/Joke.css
+++ b/src/Joke.css
@@ -1,7 +1,25 @@
 .Joke{
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+}
 
+.Joke-votes {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+    min-width: 3rem;
+    border: 2px solid blue;
+    border-radius: 50%;
+}
+
+.Joke-container {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
 }
 
 button {
@@ -19,6 +37,32 @@ button:active {
     box-shadow: none;
     border: 1px solid gray;
 }
+
+i {
+    font-size: 1.5rem;
+    margin: 0 .5rem;
+}
+
+i:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.thumbClick {
+    animation: rotateThumb .25s ease-out;
+}
+
+@keyframes rotateThumb {
+    50% {
+        transform: rotateZ(.125turn);
+    }
+    
+    
+}
+
+
+
+
 
 
 
