--- a/src/Joke.css
+++ b/src/Joke.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    height: 4rem;
 }
 
 .Joke-votes {
@@ -11,7 +12,7 @@
     justify-content: center;
     height: 3rem;
     min-width: 3rem;
-    border: 2px solid blue;
+    border: 3px solid blue;
     border-radius: 50%;
 }
 
@@ -30,6 +31,7 @@ button {
     outline: none;
     background: yellowgreen;
     box-shadow: 2px 2px 3px black;
+    
 }
 
 button:active {
@@ -38,9 +40,14 @@ button:active {
     border: 1px solid gray;
 }
 
+p {
+    font-size: .9rem;
+}
+
 i {
     font-size: 1.5rem;
     margin: 0 .5rem;
+    transition: all .25s ease-in;
 }
 
 i:hover {
@@ -52,12 +59,16 @@ i:hover {
     animation: rotateThumb .25s ease-out;
 }
 
+h1.Joke-emoji {
+    margin-left: 1.5rem;
+    font-style: none;
+    text-shadow: none;
+}
+
 @keyframes rotateThumb {
     50% {
         transform: rotateZ(.125turn);
-    }
-    
-    
+    }     
 }
 
 
