--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -1,8 +1,30 @@
+
+.JokeBoard-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 .JokeBoard {
-    border-radius: 10px;
-    background-color: peachpuff;
-    margin: 0 5vw;
-    padding: 2rem 0;
+    box-shadow: 0px 0px 3px #444;
+    border-top: 1px solid #444;
+    border-right: 1px solid #444;
+    border-bottom: 1px solid #444;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background: #00F260;  /* fallback for old browsers */
+    background: rgb(12,233,15);
+    background: linear-gradient(342deg, rgba(12,233,15,1) 0%, rgba(12,233,15,1) 30%, rgba(0,212,255,1) 70%, rgba(0,212,255,1) 100%);
+    margin: 0;
+    padding: 0;
+    height: 50vh;
+    overflow-y: scroll;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+}
+
+.JokeBoard::-webkit-scrollbar {
+    width: 0;
 }
 
 .JokeBoard-load {
@@ -13,11 +35,47 @@
     width: 300px;
     border-radius: 50%;
     background-color: red;
-    margin: auto;
+}
+
+.JokeBoard-side {
+    border-left: 1px solid #444;
+    border-top: 1px solid #444;
+    border-bottom: 1px solid #444;
+    box-shadow: 0px 0px 3px #444;
+    display: flex;
+    color: lime;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    border-radius: 20px;
+    height: 500px;
+    background: rgb(255, 238, 0);
+    width: 15vw;
+}
+
+.JokeBoard-new {
+    font-size: 1.2rem;
+    color: gold;
+    text-shadow: 1px 1px 2px black;
+    font-weight: bold;
+    padding: .75rem;
+    margin: 0 0 2rem 0;
+    border: none;
+    border-radius: 25px 2px 25px 2px;
+    background: rgb(12,233,15);
+    background: linear-gradient(151deg, rgba(12,233,15,1) 0%, rgba(12,233,15,1) 50%, rgba(0,212,255,1) 50%, rgba(0,212,255,1) 100%);
+}
+
+.Title {
+    margin: 0;
+    font-style: italic;
+    text-shadow: 2px 2px 2px #444;
 }
 
 ol {
     padding: 0 40px 0 40px;
+    overflow: hidden;
 }
 
 li {
