--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 .JokeBoard {
     box-shadow: 0px 0px 3px #444;
@@ -18,6 +17,7 @@
     margin: 0;
     padding: 0;
     height: 50vh;
+    width: 70vw;
     overflow-y: scroll;
     overflow: -moz-scrollbars-none;
     -ms-overflow-style: none;
@@ -55,7 +55,8 @@
 }
 
 .JokeBoard-new {
-    font-size: 1.2rem;
+    font-size: 1.4vw;
+    vertical-align: center;
     color: gold;
     text-shadow: 1px 1px 2px black;
     font-weight: bold;
@@ -68,6 +69,7 @@
 }
 
 .Title {
+    font-size: 2vw;
     margin: 0;
     font-style: italic;
     text-shadow: 0 0 3px black;
@@ -84,5 +86,5 @@ li {
 }
 
 img {
-    height: 13rem;
+    height: 13vw;
 }
