--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -60,7 +60,7 @@
     color: gold;
     text-shadow: 1px 1px 2px black;
     font-weight: bold;
-    padding: .75rem;
+    /* padding: .75rem; */
     margin: 0 0 2rem 0;
     border: 1px solid #888;
     border-radius: 25px 2px 25px 2px;
@@ -87,4 +87,36 @@ li {
 
 img {
     height: 13vw;
+}
+
+@media (max-width: 1024px) {
+    .JokeBoard-container {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .JokeBoard {
+        width: 85vw;
+        height: 55vh;
+        border-radius: 10px;
+        border: 1px solid #444;
+    }
+    .JokeBoard-new {
+        font-size: 3vw;
+        margin: 0;
+    }
+    .JokeBoard-side {
+        flex-direction: column;
+        width: 75vw;
+        height: 30vh;
+        margin-bottom: 2vh;
+        border: 1px solid #444;
+        border-radius: 50%;
+        padding: 2vh 0;
+    }
+    .Title {
+        font-size: 5vw;  
+    }
+    img {
+        height: 17vw;
+    }
 }
