--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -5,6 +5,7 @@
     align-items: center;
 }
 .JokeBoard {
+    display: flex;
     box-shadow: 0px 0px 3px #444;
     border-top: 1px solid #444;
     border-right: 1px solid #444;
