--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: 1s fadeIn ease-in;
 }
 .JokeBoard {
     display: flex;
@@ -14,7 +15,7 @@
     border-bottom-right-radius: 10px;
     background: #00F260;  /* fallback for old browsers */
     background: rgb(12,233,15);
-    background: linear-gradient(342deg, rgba(12,233,15,1) 0%, rgba(12,233,15,1) 30%, rgba(0,212,255,1) 70%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(335deg, rgba(12,233,15,1) 0%, rgba(12,233,15,1) 30%, rgba(0,212,255,1) 70%, rgba(0,212,255,1) 100%);
     margin: 0;
     padding: 0;
     height: 50vh;
@@ -36,6 +37,7 @@
     width: 300px;
     border-radius: 50%;
     background-color: red;
+    animation: fadeOut 2s ease-out;
 }
 
 .JokeBoard-side {
@@ -55,13 +57,34 @@
     width: 15vw;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        background: red;
+        width: 20vw;
+        opacity: 1;
+    }
+    100% {
+        background: lime;
+        opacity: 0;
+        width: 5vw;
+    }
+}
+
 .JokeBoard-new {
     font-size: 1.4vw;
     vertical-align: center;
     color: gold;
     text-shadow: 1px 1px 2px black;
     font-weight: bold;
-    /* padding: .75rem; */
     margin: 0 0 2rem 0;
     border: 1px solid #888;
     border-radius: 25px 2px 25px 2px;
@@ -118,6 +141,6 @@ img {
         font-size: 5vw;  
     }
     img {
-        height: 17vw;
+        height: 16vw;
     }
 }
