--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -5,6 +5,19 @@
     align-items: center;
     animation: 1s fadeIn ease-in;
 }
+
+.JokeBoard-fadeOut {
+    animation: 1s jokeFadeOut ease-out forwards;
+}
+
+@keyframes jokeFadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
 .JokeBoard {
     display: flex;
     box-shadow: 0px 0px 3px #444;
@@ -37,7 +50,7 @@
     width: 300px;
     border-radius: 50%;
     background-color: red;
-    animation: fadeOut 2s ease-out;
+    animation: 1.4s fadeOut ease-out forwards;
 }
 
 .JokeBoard-side {
@@ -68,14 +81,15 @@
 
 @keyframes fadeOut {
     0% {
-        background: red;
-        width: 20vw;
+        opacity: 0;
+    }
+    50% {
         opacity: 1;
+        transform: rotateZ(360deg);
     }
     100% {
-        background: lime;
         opacity: 0;
-        width: 5vw;
+        transform: rotateZ(360deg)
     }
 }
 
@@ -96,7 +110,7 @@
     font-size: 2vw;
     margin: 0;
     font-style: italic;
-    text-shadow: 0 0 3px black;
+    text-shadow: 0 0 4px black;
 }
 
 ol {
