--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -49,9 +49,17 @@
     height: 300px;
     width: 300px;
     border-radius: 50%;
-    background-color: red;
-    animation: 1.4s fadeOut ease-out forwards;
+    background-color: transparent;
+    
 }
+
+.fa-circle-notch {
+    color: red;
+    text-shadow: 0px 0px 30px blue;
+    font-size: 8rem;
+    animation: 2s fadeOut ease-out forwards;
+}
+
 
 .JokeBoard-side {
     border-left: 1px solid #444;
@@ -85,11 +93,11 @@
     }
     50% {
         opacity: 1;
-        transform: rotateZ(360deg);
+        
     }
     100% {
         opacity: 0;
-        transform: rotateZ(360deg)
+        transform: rotateZ(720deg)
     }
 }
 
