--- a/src/Joke.css
+++ b/src/Joke.css
@@ -51,7 +51,7 @@ i {
     transition: all .25s ease-in;
 }
 
-i:hover {
+i:hover{
     cursor: pointer;
     transform: scale(1.2);
 }
@@ -72,9 +72,26 @@ h1.Joke-emoji {
     }     
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 767px) {
     p {
-        font-size: 1.3rem;  
+        font-size: .75rem;
+    }
+    h1.Joke-emoji {
+        font-size: 1.5rem;
+        margin: 0 5px;
+    }
+    i {
+        font-size: 1.2rem;
+    }
+    i:hover {
+        transform: none;
+    }
+    i:active {
+        transform: scale(1.2);
+    }
+    .Joke-votes {
+        height: 2rem;
+        min-width: 2rem;
     }
 }
 
