--- a/src/Joke.css
+++ b/src/Joke.css
@@ -95,6 +95,18 @@ h1.Joke-emoji {
     }
 }
 
+@media (min-width: 1400px) {
+    p {
+        font-size: 1.5rem;
+    }
+    h1.Joke-emoji {
+        font-size: 3rem;
+    }
+    .Joke-container {
+        margin-left: 15px;
+    }
+}
+
 
 
 
