--- a/src/Joke.css
+++ b/src/Joke.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: flex-start;
     height: 4rem;
-    padding: 5px 0;
+    padding-top: 20px;
 }
 
 .Joke-votes {
