--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -102,15 +102,12 @@
     justify-content: space-around;
     text-align: center;
     align-items: center;
+    padding: 0 10px;
     border-radius: 20px;
-    height: 500px;
+    height: 60vh;
     background: rgb(255, 238, 0);
     width: 15vw;
 }
-
-
-
-
 
 .JokeBoard-new {
     font-size: 1.4vw;
@@ -127,17 +124,6 @@
     background: rgb(12,233,15);
     background: linear-gradient(151deg, rgba(12,233,15,1) 0%, rgba(12,233,15,1) 50%, rgba(0,212,255,1) 50%, rgba(0,212,255,1) 100%);
 }
-
-/* button {
-    min-width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    margin-right: 2rem;
-    
-    background: yellowgreen;
-    
-    
-} */
 
 .JokeBoard-new:active {
     transform: translate(2px,2px);
@@ -183,18 +169,20 @@ img {
     }
     .JokeBoard-side {
         flex-direction: column;
+        justify-content: center;
         width: 75vw;
         height: 30vh;
         margin-bottom: 2vh;
         border: 1px solid #444;
         border-radius: 50%;
-        padding: 2vh 0;
+        padding: 2vh 10px;
     }
     .Title {
         font-size: 4.5vh;  
     }
     img {
         height: 14vw;
+        margin: 20px 0;
     }
 }
 
@@ -207,15 +195,17 @@ img {
     }
     .JokeBoard-side {
         width: 95vw;
+        padding: 0;
     }
     .Title {
         font-size: 3.8vh;
     }
     .JokeBoard-new {
-        font-size: 3.3vh;
+        font-size: 2.75vh;
         padding: 5px 10px;
     }
     img {
         height: 13vh;
+        margin: 5px 0;
     }
 }
