--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -59,16 +59,6 @@
     flex-grow: 1;
 }
 
-.JokeBoard-load {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 300px;
-    width: 300px;
-    border-radius: 50%;
-    background-color: transparent;
-}
-
 .fa-circle-notch {
     color: red;
     text-shadow: 0px 0px 30px blue;
@@ -88,8 +78,6 @@
         transform: rotateZ(2turn);
     }
 }
-
-
 
 .JokeBoard-side {
     border-left: 1px solid #444;
@@ -113,7 +101,8 @@
     font-size: 1.4vw;
     vertical-align: center;
     color: gold;
-    text-shadow: 1px 1px 2px black;
+    /* text-shadow: 1px 1px 2px black; */
+    text-shadow: -1px -1px 1px #555, 1px -1px 1px #555, -1px 1px 1px #555, 1px 1px 1px #555;
     font-weight: bold;
     margin: 0 0 2rem 0;
     padding: .5rem 1vw;
@@ -135,7 +124,8 @@
     font-size: 2.5vw;
     margin: 0;
     font-style: italic;
-    text-shadow: 0 0 4px black;
+    /* text-shadow: 0 0 4px black; */
+    text-shadow: -1px -1px 2px #555, 1px -1px 2px #555, -1px 1px 2px #555, 1px 1px 2px #555;
 }
 
 ol {
