--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -158,6 +158,7 @@ img {
         margin: 0;
     }
     .JokeBoard-side {
+        margin-top: 10px;
         flex-direction: column;
         justify-content: center;
         width: 75vw;
@@ -185,6 +186,7 @@ img {
     }
     .JokeBoard {
         width: 95vw;
+        height: 50vh;
     }
     .JokeBoard-side {
         width: 95vw;
