--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 html {
   padding: 0;
   margin: 0;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
