--- a/src/JokeBoard.css
+++ b/src/JokeBoard.css
@@ -59,6 +59,15 @@
     flex-grow: 1;
 }
 
+.JokeBoard-instruct {
+    font-style: italic;
+    text-align: center;
+    font-size: .75rem;
+    margin: 5px auto 0 auto;
+    font-weight: bold;
+    opacity: .7;
+}
+
 .fa-circle-notch {
     color: red;
     text-shadow: 0px 0px 30px blue;
@@ -131,6 +140,7 @@
 ol {
     padding: 0 40px 0 40px;
     overflow: hidden;
+    margin-top: 0;
 }
 
 li {
@@ -147,12 +157,18 @@ img {
         flex-direction: column;
         justify-content: flex-start;
     }
+
     .JokeBoard {
         width: 85vw;
         height: 55vh;
         border-radius: 10px;
         border: 1px solid #444;
     }
+
+    ol {
+        margin-top: 0;
+    }
+    
     .JokeBoard-new {
         font-size: 3vw;
         margin: 0;
